# Turbofan-Prognostics

./: .gitignore  main.py  pyproject.toml
app/: Home.py
app/pages/: About Data.py  Benchmark.py  Modeling Flow.py
data/: readme.md
notebooks/: 02_data_preprocessing.ipynb  02_feature_engineering.ipynb  03_model_building.ipynb
src/: exception.py  logger.py
