[project]
name = "turbofan-prognostics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "nbformat>=5.10.4",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.68.3",
]
