[project]
name = "turbofan-prognostics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boruta>=0.4.3",
    "catboost>=1.2.10",
    "feature-engine>=1.9.4",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "mlflow>=3.14.0",
    "nbformat>=5.10.4",
    "numpy>=2.5.0",
    "pandas<3",
    "plotly>=6.8.0",
    "protobuf==4.25.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "xgboost>=3.3.0",
]
